force-app/main/default/objects/Membership__c/fields/Academia_Check__c.field-meta.xml
<CustomField>
    <fullName>Academia_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to see if academia membership</description>
    <label>Academia_Check</label>
    <type>Checkbox</type>
</CustomField>