force-app/main/default/objects/Membership__c/fields/Auto_Renewable__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Renewable</label>
    <type>Checkbox</type>
</CustomField>