force-app/main/default/objects/Membership__c/fields/Individual_Certification_Kit__c.field-meta.xml
<CustomField>
    <fullName>Individual_Certification_Kit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Certification Kit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Memberships (Individual Welcome Kit)</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>