force-app/main/default/objects/Membership__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Job Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>