force-app/main/default/objects/Membership__c/fields/Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level__c</fullName>
    <label>Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Practice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>