force-app/main/default/objects/Membership__c/fields/Membership_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Start_Date__c</fullName>
    <label>(Deprecated) Membership Start Date</label>
    <type>Date</type>
</CustomField>