force-app/main/default/objects/Membership__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>(Deprecated) Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veterinary</fullName>
            </value>
            <value>
                <fullName>Groomer</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Pet Sitter</fullName>
            </value>
            <value>
                <fullName>Boarding &amp; Daycare</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>