force-app/main/default/objects/Membership__c/fields/Practice_Certification_Kit__c.field-meta.xml
<CustomField>
    <fullName>Practice_Certification_Kit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice Certification Kit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Memberships (Practice Certification Kit)</relationshipLabel>
    <relationshipName>Memberships2</relationshipName>
    <type>Lookup</type>
</CustomField>