force-app/main/default/objects/Membership__c/fields/Renewal_Frequency_In_Years__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Frequency_In_Years__c</fullName>
    <label>(Deprecated) Renewal Frequency In Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>