force-app/main/default/objects/Membership__c/fields/WC_Id__c.field-meta.xml
<CustomField>
    <fullName>WC_Id__c</fullName>
    <label>WC Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>