force-app/main/default/objects/Membership__c/fields/Welcome_Kit_Parent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Kit_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Deprecated) Certification Kit Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Memberships (Certification Kit Product)</relationshipLabel>
    <relationshipName>Memberships1</relationshipName>
    <type>Lookup</type>
</CustomField>