force-app/main/default/objects/Membership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Membership_Level__c</columns>
    <columns>Job_Id__c</columns>
    <columns>Renewable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>